# desparchado

./: .bowerrc  .codacy.yaml  .coderabbit.yaml  .coveragerc  .editorconfig  .flake8  .gitignore  .pylintrc  .readthedocs.yaml  .stylelintrc.json  .travis.yml  CLAUDE.md  Dockerfile  Makefile  README.md  backstop.config.js  bower.json  conftest.py  dashboard.py  docker-compose.yml  eslint.config.mjs  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  settings.json  tsconfig.json  vite.config.js
.circleci/: config.yml
.claude/: todo.md
.claude/agents/: architect.md  backend-expert.md  frontend-expert.md  unit-test-writer.md
.claude/commands/: analyze-task.md  apply-plan.md
.github/workflows/: codeql-analysis.yml  lint.yml  sentry-release.yml
.storybook/: main.ts
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-04-05-1.md
_bmad-output/implementation-artifacts/: deferred-work.md  review-diff.patch  spec-event-target-audience.md  spec-replace-google-maps-leaflet.md  spec-special-detail-unified-filters.md  spec-special-filter-ux-be-improvements.md  spec-static-pages-new-design.md  spec-target-audience-filter.md  spec-wip.md
_bmad-output/planning-artifacts/: architecture.md  prd.md  product-brief-event-creation-ux-distillate.md  product-brief-event-creation-ux.md  product-brief-navigation-discovery-distillate.md  product-brief-navigation-discovery.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv  tool-manifest.csv  workflow-manifest.csv
_bmad/_memory/: config.yaml
blog/: admin.py  models.py  urls.py  views.py
books/: admin.py  data.py  goodreads_client.py  models.py  services.py  taganga_client.py  urls.py  views.py
dashboard/: __init__.py  admin.py  mixins.py  models.py  services.py  urls.py  views.py
desparchado/: autocomplete.py  backends.py  context_processors.py  exceptions.py  mixins.py  models.py  settings.py  sitemap.py  test_settings.py  travis_test_settings.py  urls.py  utils.py  views.py  wsgi.py
docs/: api-contracts.md  architecture.md  component-inventory.md  data-models.md  development-guide.md  index.md  mkdocs.yml  project-scan-report.json  requirements.txt  source-tree.md  technology-stack.md
events/: admin.py  api_urls.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
games/: admin.py  forms.py  models.py  services.py  urls.py  views.py
history/: admin.py  forms.py  models.py  services.py  urls.py  views.py
news/: admin.py  models.py  urls.py  views.py
places/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  widgets.py
playground/: urls.py  views.py
production-deploy/: deploy.sh
scripts/: create_release_tag.sh  deploy.sh
specials/: admin.py  models.py  urls.py  views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
webpack/: webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
(+557 files in other folders)
