[project]
requires-python = "==3.11"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]
line-length = 88
target-version = "py311"
lint.extend-select = [
    "E",      # Pycodestyle errors (style issues)
    "W",      # Pycodestyle warnings (style issues)
    "I",      # isort – import ordering checks
    "ASYNC",  # Flake8-async – checks async/await usage
    "S",      # Flake8-bandit – security issues
    "DJ",     # Flake8-django – Django-specific conventions
    "PTH",    # Flake8-use-pathlib – encourages pathlib over os.path
    "RSE",    # Flake8-raise – proper raise statement usage
    "COM",    # Flake8-commas – trailing/comma issues
    "T20",    # Flake8-print – check for Print statements
    "FLY",    # Flynt – f-string conversion suggestions
]

[tool.ruff.lint.extend-per-file-ignores]
"*/tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "S105", # login with psw allowed in tests...
    "S311", # random generators allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
#    "PLR2004", # Magic value used in comparison, ...
#    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.pytest]
DJANGO_SETTINGS_MODULE = "desparchado.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_paths = ["."]
addopts = [
    "--reuse-db",
    "--cov=./",
    "--no-cov-on-fail",
]
